--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     compile "com.android.support:cardview-v7:$supportVer"
     compile "com.android.support:recyclerview-v7:$supportVer"
     compile "com.android.support:design:$supportVer"
+    compile "com.android.support:customtabs:$supportVer"
 
     //di
     compile "com.google.dagger:dagger:$daggerVer"
