--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'realm-android'
 
+
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.1"
@@ -26,6 +27,9 @@ android {
     kapt {
         generateStubs = true
     }
+    packagingOptions {
+        exclude 'META-INF/rxjava.properties'
+    }
 }
 def daggerVer = '2.10'
 def supportVer = '25.3.1'
@@ -47,18 +51,18 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:$daggerVer"
 
     //rx
-    compile 'io.reactivex:rxjava:1.2.6'
-    compile 'io.reactivex:rxandroid:1.2.1'
+    compile "io.reactivex.rxjava2:rxjava:2.1.0"
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
     //images
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
 
     //network
-    compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
+    compile 'com.squareup.retrofit2:retrofit:2.2.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.2.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
 
     //anko
     compile 'org.jetbrains.anko:anko-common:0.9'
