--- a/mvp-core/build.gradle
+++ b/mvp-core/build.gradle
@@ -1,9 +1,8 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.1"
+    buildToolsVersion project.ext.buildToolsVersion
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion 25
@@ -17,16 +16,17 @@ android {
         }
     }
 }
-def supportVer = '25.3.1'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    //support
-    compile "com.android.support:appcompat-v7:$supportVer"
-    compile "com.android.support:design:$supportVer"
+    compile "com.android.support:appcompat-v7:$project.ext.supportVersion"
+    compile "com.android.support:design:$project.ext.supportVersion"
 
     //rx
-    compile "io.reactivex.rxjava2:rxjava:2.1.0"
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation "io.reactivex.rxjava2:rxjava:2.1.0"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+}
+repositories {
+    mavenCentral()
 }
