--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
         maven { url 'https://maven.google.com' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-alpha3'
+        classpath 'com.android.tools.build:gradle:3.0.0-alpha4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "io.realm:realm-gradle-plugin:3.1.3"
 
@@ -33,8 +33,8 @@ allprojects {
         maven { url "https://maven.google.com" }
     }
     project.ext {
-        supportVersion = '25.4.0'
-        buildToolsVersion = '25.0.3'
+        supportVersion = '26.0.0-beta2'
+        buildToolsVersion = '26.0.0'
     }
 }
 
