--- a/build.gradle
+++ b/build.gradle
@@ -10,19 +10,17 @@ subprojects {
     }
 }
 buildscript {
-    ext.kotlin_version = '1.1.2-5'
+    ext.kotlin_version = '1.1.3'
 
     repositories {
         jcenter()
         maven { url 'https://maven.google.com' }
+        maven { url "http://dl.bintray.com/creati8e/maven" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-alpha4'
+        classpath 'com.android.tools.build:gradle:3.0.0-alpha8'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "io.realm:realm-gradle-plugin:3.1.3"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "io.realm:realm-gradle-plugin:3.5.0"
     }
 }
 
@@ -31,9 +29,10 @@ allprojects {
         jcenter()
         maven { url "https://jitpack.io" }
         maven { url "https://maven.google.com" }
+        maven { url "http://dl.bintray.com/creati8e/maven" }
     }
     project.ext {
-        supportVersion = '26.0.0-beta2'
+        supportVersion = '26.0.0'
         buildToolsVersion = '26.0.0'
     }
 }
