--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,2 @@
-include ':app', ':mvp-core'
+include ':app'
+//,':mvp-core',':mvp-core-android',':mvp-core-processor',':stub-android',':stub-viewstate-provider'
